--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,17 @@
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="C:/Users/llyto/Desktop/mysql-connector-java-8.0.23.jar"/>
+	<classpathentry kind="lib" path="C:/Users/llyto/Desktop/iText/itext5-itextpdf-5.5.11.jar"/>
+	<classpathentry kind="lib" path="C:/Users/llyto/Desktop/iText/itext5-itextpdf-5.5.11-javadoc.jar"/>
+	<classpathentry kind="lib" path="C:/Users/llyto/Desktop/iText/itext5-itextpdf-5.5.11-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/llyto/Desktop/iText/itext5-itext-pdfa-5.5.11.jar"/>
+	<classpathentry kind="lib" path="C:/Users/llyto/Desktop/iText/itext5-itext-pdfa-5.5.11-javadoc.jar"/>
+	<classpathentry kind="lib" path="C:/Users/llyto/Desktop/iText/itext5-itext-pdfa-5.5.11-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/llyto/Desktop/iText/itext5-itext-xtra-5.5.11.jar"/>
+	<classpathentry kind="lib" path="C:/Users/llyto/Desktop/iText/itext5-itext-xtra-5.5.11-javadoc.jar"/>
+	<classpathentry kind="lib" path="C:/Users/llyto/Desktop/iText/itext5-itext-xtra-5.5.11-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/llyto/Desktop/iText/itext5-xmlworker-5.5.11.jar"/>
+	<classpathentry kind="lib" path="C:/Users/llyto/Desktop/iText/itext5-xmlworker-5.5.11-javadoc.jar"/>
+	<classpathentry kind="lib" path="C:/Users/llyto/Desktop/iText/itext5-xmlworker-5.5.11-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
