--- a/.classpath
+++ b/.classpath
@@ -6,18 +6,18 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="/home/joseantoniogalan/eclipse-workspace/MVC_Peluqueria/Itext/itext5-xmlworker-5.5.11-sources.jar"/>
-	<classpathentry kind="lib" path="/home/joseantoniogalan/eclipse-workspace/MVC_Peluqueria/Itext/itext5-xmlworker-5.5.11-javadoc.jar"/>
-	<classpathentry kind="lib" path="/home/joseantoniogalan/eclipse-workspace/MVC_Peluqueria/Itext/itext5-xmlworker-5.5.11.jar"/>
-	<classpathentry kind="lib" path="/home/joseantoniogalan/eclipse-workspace/MVC_Peluqueria/Itext/itext5-itext-xtra-5.5.11-sources.jar"/>
-	<classpathentry kind="lib" path="/home/joseantoniogalan/eclipse-workspace/MVC_Peluqueria/Itext/itext5-itext-xtra-5.5.11-javadoc.jar"/>
-	<classpathentry kind="lib" path="/home/joseantoniogalan/eclipse-workspace/MVC_Peluqueria/Itext/itext5-itext-xtra-5.5.11.jar"/>
-	<classpathentry kind="lib" path="/home/joseantoniogalan/eclipse-workspace/MVC_Peluqueria/Itext/itext5-itext-pdfa-5.5.11-sources.jar"/>
-	<classpathentry kind="lib" path="/home/joseantoniogalan/eclipse-workspace/MVC_Peluqueria/Itext/itext5-itext-pdfa-5.5.11-javadoc.jar"/>
-	<classpathentry kind="lib" path="/home/joseantoniogalan/eclipse-workspace/MVC_Peluqueria/Itext/itext5-itext-pdfa-5.5.11.jar"/>
-	<classpathentry kind="lib" path="/home/joseantoniogalan/eclipse-workspace/MVC_Peluqueria/Itext/itext5-itextpdf-5.5.11-sources.jar"/>
-	<classpathentry kind="lib" path="/home/joseantoniogalan/eclipse-workspace/MVC_Peluqueria/Itext/itext5-itextpdf-5.5.11-javadoc.jar"/>
-	<classpathentry kind="lib" path="/home/joseantoniogalan/eclipse-workspace/MVC_Peluqueria/Itext/itext5-itextpdf-5.5.11.jar"/>
-	<classpathentry kind="lib" path="/home/joseantoniogalan/eclipse-workspace/MVC_Peluqueria/mysql-connector-java-8.0.23.jar"/>
+	<classpathentry kind="lib" path="C:/Users/llyto/eclipse-workspace/MVC_Peluqueria/mysql-connector-java-8.0.23.jar"/>
+	<classpathentry kind="lib" path="C:/Users/llyto/eclipse-workspace/MVC_Peluqueria/Itext/itext5-itextpdf-5.5.11.jar"/>
+	<classpathentry kind="lib" path="C:/Users/llyto/eclipse-workspace/MVC_Peluqueria/Itext/itext5-itextpdf-5.5.11-javadoc.jar"/>
+	<classpathentry kind="lib" path="C:/Users/llyto/eclipse-workspace/MVC_Peluqueria/Itext/itext5-itextpdf-5.5.11-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/llyto/eclipse-workspace/MVC_Peluqueria/Itext/itext5-itext-pdfa-5.5.11.jar"/>
+	<classpathentry kind="lib" path="C:/Users/llyto/eclipse-workspace/MVC_Peluqueria/Itext/itext5-itext-pdfa-5.5.11-javadoc.jar"/>
+	<classpathentry kind="lib" path="C:/Users/llyto/eclipse-workspace/MVC_Peluqueria/Itext/itext5-itext-pdfa-5.5.11-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/llyto/eclipse-workspace/MVC_Peluqueria/Itext/itext5-itext-xtra-5.5.11.jar"/>
+	<classpathentry kind="lib" path="C:/Users/llyto/eclipse-workspace/MVC_Peluqueria/Itext/itext5-itext-xtra-5.5.11-javadoc.jar"/>
+	<classpathentry kind="lib" path="C:/Users/llyto/eclipse-workspace/MVC_Peluqueria/Itext/itext5-itext-xtra-5.5.11-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/llyto/eclipse-workspace/MVC_Peluqueria/Itext/itext5-xmlworker-5.5.11.jar"/>
+	<classpathentry kind="lib" path="C:/Users/llyto/eclipse-workspace/MVC_Peluqueria/Itext/itext5-xmlworker-5.5.11-javadoc.jar"/>
+	<classpathentry kind="lib" path="C:/Users/llyto/eclipse-workspace/MVC_Peluqueria/Itext/itext5-xmlworker-5.5.11-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
